# learning_notes

./: RANSAC.md  README.md  SceneMatching.cpp  eigen_usage.md  无人机领域知名课题组.md
AvoidanceNotes/: AvoidanceNotes.md
LandingNotes/: landing_pkgs.tar.xz  px4_notes.md  sim_px4.md
LandingNotes/2-buildEnvironment/: landing_scene.world
LandingNotes/2-buildEnvironment/1-landing_box/gazeboModel/: readme.md
LandingNotes/2-buildEnvironment/1-landing_box/gazeboModel/landing_box/materials/: model.config
LandingNotes/2-buildEnvironment/1-landing_box/gazeboModel/landing_box/materials/scripts/: landing_box.material  model.sdf
LandingNotes/2-buildEnvironment/1-landing_box/plotLandingTarget/: CMakeLists.txt  main.cpp  readme.md
LandingNotes/2-buildEnvironment/2-iris_fpv_cam/: reamde.md
LandingNotes/2-buildEnvironment/2-iris_fpv_cam/iris_fpv_cam/: iris_fpv_cam.sdf
LandingNotes/2-buildEnvironment/3-SITL/: sitl.md
LandingNotes/2-buildEnvironment/3-SITL/launch/: iris_mavros_posix_sitl.launch  iris_posix_sitl.launch
LandingNotes/3-run/: landingNotes.md
QGroundControl/Telemetry/: 2020-12-16 23-13-20.tlog  2020-12-17 08-59-49.tlog  2020-12-21 22-05-06.tlog  2020-12-21 22-12-29.tlog  2020-12-21 22-27-42.tlog  2020-12-23 10-01-29.tlog
XTDrone_notes/: XTDrone_notes.md
apm_notes/: apm_notes.md
darknet_ros_notes/: darknet_ros_notes.md
git_notes/: git_notes.md
linuxCommand/: test.tar.xz
linuxCommand/test/: lovezq.txt  test.txt
prometheus_notes/: ROS_IDES.md  prometheus_notes.md
rotors_simulator_notes/: rotors_simulator_notes.md
yaml_notes/: yaml_notes.md
